# SMB-MSL

./: .gitignore  README.md  pyproject.toml  setup.sh
berlot2020_task/: __init__.py  __main__.py  config.py  data_logging.py  display.py  sequences.py  task_pretrain.py  task_scan.py  task_test.py  task_training.py
smb_ssl_task/: __main__.py  advanced_gui.py  config.py  display.py  game.py  msp.py  scenes.py  task_pretrain.py  task_scan.py  task_test.py  task_training.py
