[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smb-msl"
version = "0.2.0"
description = "SMB Scene Sequence Learning (SSL) motor sequence learning task."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "psychopy>=2024.1.0",
    "stable-retro>=0.9.2",
    "numpy>=1.24",
    "datalad>=1.0",
    "tqdm>=4.0",
]

[project.scripts]
smb-ssl-task = "smb_ssl_task.__main__:main"

[tool.setuptools.packages.find]
include = ["smb_ssl_task*"]
